# nanoGCG-redteam

./: .gitignore  Makefile
.github/workflows/: publish-to-pypi.yml
examples/huggingface_attack/: attack.py  config.toml
examples/mock_api_attack/: Makefile  attack.py  config.toml  pyproject.toml  server.py
tests/huggingface_attack/: Makefile  pyproject.toml
tests/mock_api_attack/: attack.py  server.py
