[project]
name = "huggingface-attack"
version = "0.1.0"
description = "Example of using nanoGCG-redteam with standard HuggingFace models"
requires-python = ">=3.10"
dependencies = ["transformers", "torch", "nanogcg-redteam", "tomli"]

[tool.uv.sources]
nanogcg-redteam = { path = "../../", editable = true }
